--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailt",
   "version": "1.0.0",
-  "description": "⚡ ⚛️ Create blazingly fast custom React.js components",
+  "description": "⚡ ⚛️ Create blazingly fast custom React components",
   "main": "bin/index.js",
   "repository": "https://github.com/BerzanXYZ/tailt.git",
   "author": "BerzanXYZ <berzan@tutanota.com>",
