Setting tsc to remove comments from the build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./bin",
     "strict": true,
     "skipLibCheck": true,
+    "removeComments": true,
     "jsx": "react-jsx",
   },
   "include": [
