--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailt",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "⚡ ⚛️ Create blazingly fast custom React components",
   "main": "bin/index.js",
   "repository": "https://github.com/BerzanXYZ/tailt.git",
@@ -9,6 +9,10 @@
   "files": [
     "bin"
   ],
+  "peerDependencies": {
+    "react": "^17 || ^18",
+    "tailwindcss": "^3"
+  },
   "devDependencies": {
     "@types/react": "^18.0.12",
     "react": "^18.1.0",
